# chess-engine

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: board.rs  color.rs  direction.rs  lib.rs  main.rs  move.rs  piece.rs  position.rs  square.rs
