[package]
name = "chess"
version = "0.1.0"
edition = "2021"
authors = ["George Kvaratskhelia <fulstaph@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "chess"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
enum-iterator = "0.8.1"